crates/plotnik-tests/tests/03-analyze/predicates/regex_crlf_flag.txt
Q = (identifier =~ /(?R:.)/)
------------------ DIAGNOSTICS -------------------
error: CRLF mode is not supported because target engines disagree on line terminators
 --> query.ptk:1:23
  |
1 | Q = (identifier =~ /(?R:.)/)
  |                       ^
  |
help: spell line terminators explicitly. `^` and `$` always mean text start and end
-------------------- SYMBOLS ---------------------
